changed timer to 30 seconds fixed alignment on the nav added logo via pierson

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,10 @@ body{
   padding:20px 50px;
 }
 
+.logo{
+  width:80px;
+}
+
 /*****************
 *                *
 *  Start Index   *
